--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
+    "ethereumjs-tx": "^2.1.2",
     "web3": "^1.2.8"
+  },
+  "devDependencies": {
+    "@types/web3": "^1.2.2"
   }
 }
