--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "web3": "^1.2.8"
   },
   "devDependencies": {
-    "@types/web3": "^1.2.2"
+    "@types/web3": "^1.2.2",
+    "tsdx": "^0.13.2"
   }
 }
